objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ASID__c</fullName>
        <formula>PricebookEntry.Product2.ASID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_PCS_and_OCS_Do_Not_Match__c</fullName>
        <formula>Opportunity.Account.Original_Campaign_Source__r.Name &lt;&gt; Opportunity.Account.Campaign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Parent Client Source checked against Original Campaign Source</inlineHelpText>
        <label>Account PCS and OCS Do Not Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate_Payment_Amount_Formula__c</fullName>
        <formula>IF( NOT(ISBLANK(PricebookEntry.Product2.Affiliate_Payment_Percent__c)), PricebookEntry.Product2.Affiliate_Payment_Percent__c * TotalPrice,

IF(  CONTAINS(TEXT(Opportunity.Account.Main_Lead_Source__c), &quot;Don Pendleton&quot;) &amp;&amp; CONTAINS(Opportunity.Account.Original_Campaign_Source__r.Name, &quot;Don Pendleton&quot;), TotalPrice * 0.4,

IF(  CONTAINS(Opportunity.Sale_Campaign__r.Name, &quot;Don Pendleton&quot;), TotalPrice * 0.2,

IF( NOT(ISBLANK(Opportunity.Account.Original_Campaign_Source__r.Affiliate_Percentage__c)), Opportunity.Account.Original_Campaign_Source__r.Affiliate_Percentage__c  * TotalPrice,

IF( NOT(ISBLANK(Opportunity.Account.Original_Campaign_Source__r.Parent.Affiliate_Percentage__c)),
Opportunity.Account.Original_Campaign_Source__r.Parent.Affiliate_Percentage__c * TotalPrice,

Opportunity.Account.Original_Campaign_Source__r.Parent.Parent.Affiliate_Percentage__c * TotalPrice

)))))</formula>
        <label>Affiliate Payment Amount Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Affiliate_Payment_Amount__c</fullName>
        <inlineHelpText>This field is used only for Affiliate reporting. It multiplies the &quot;Affiliate Payment Percent&quot; field on the service record by the &quot;TotalPrice&quot; field on the service item record.</inlineHelpText>
        <label>Affiliate Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Affiliate_Price__c</fullName>
        <formula>PricebookEntry.Product2.Price_Percentage__c *  TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked the asset has already been applied to the account for this OLI. Used to prevent duplicates.</description>
        <label>Asset Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <formula>Opportunity.Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>Opportunity.Text_Invoice_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReplaced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vertiba OnDemand, 10/13/2014, Checkbox for replacement of line items</description>
        <label>IsReplaced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineItemID__c</fullName>
        <description>Vertiba OnDemand, 10/13/2014, The ID of the opportunity line item</description>
        <formula>Id</formula>
        <label>LineItemID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricebookID__c</fullName>
        <description>Vertiba OnDemand, 10/13/2014, The ID of the pricebook entry</description>
        <formula>PricebookEntryId</formula>
        <label>PricebookID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <formula>PricebookEntry.Product2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product2Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Entity_Type__c</fullName>
        <label>Product Entity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_formula__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_formula__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Entity_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Name__c</fullName>
        <formula>Opportunity.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceNameRollupField__c</fullName>
        <formula>Service_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ServiceNameRollupField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Completed_Date__c</fullName>
        <description>Date the Service Item is Completed</description>
        <inlineHelpText>Date the Service Item is Completed</inlineHelpText>
        <label>Service Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Text__c</fullName>
        <label>Service Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_in_Affiliate_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show in Affiliate Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent a Kit</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <description>Price * Quantity = Total List Price</description>
        <formula>ListPrice  *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula for roll-up field to the Opportunity.</inlineHelpText>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Paid__c</fullName>
        <description>Vertiba OnDemand, 8/19/2014, SR-00002048, Used in reports to display services paid vs services invoiced.</description>
        <formula>IF ( Opportunity.IsWon ,
     TotalPrice,
     0
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Sale__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Sale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Call__c</fullName>
        <formula>PricebookEntry.Product2.Welcome_Call__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Welcome Call</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>